fix ui on safari and unexpected horizontal scroll bar

--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@
 @import "./fontSize.css";
 
 .viewPort {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     flex-direction: column;
     display: flex;
 }
