--- a/src/AppMobile.css
+++ b/src/AppMobile.css
@@ -20,6 +20,7 @@
     .viewInfoHeader {
         display: flex;
         flex-direction: column;
+        margin-top: 10px;
     }
 
     .textNameHeader {
@@ -37,6 +38,7 @@
     .viewContact {
         display: flex;
         flex-direction: column;
+        margin-top: 10px;
     }
 
     .viewWrapItemContact {
